# corral

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOP.md  README.md  ROADMAP_FILE_DIFF_VIEWER.md  index.html  pyproject.toml
.claude/: settings.json
.claude/commands/: publish.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agent-teams-message-board/: index.html
api/jobs/: index.html
api/webhooks/: index.html
button-macros/: index.html
doc_features/: file_diff_viewer.md
docs/: CLAUDE.md  index.md  mkdocs.yml
docs/docs/: button-macros.md  index.md  live-sessions.md  metrics-observability.md  multi-agent-orchestration.md  one-time-jobs.md  protocol.md  scheduled-jobs.md  session-history-search.md  webhooks.md
docs/docs/api/: jobs.md
git-integration/: index.html
launch_strategy/: dev_io_blog.md
live-sessions/: index.html
multi-agent-orchestration/: index.html
one-time-jobs/: index.html
protocol/: index.html
roadmap/: 10-ui-cleanup.md
scheduled-jobs/: index.html
search/: search_index.json
session-history-search/: index.html
src/agent_fleet/: PROTOCOL.md  agent_manager.py  auto_summarizer.py  dashboard.py  git_poller.py  hook_agentic_state.py  hook_task_sync.py  launch.py  launch_agents.sh  log_streamer.py  session_indexer.py  session_manager.py  session_store.py  task_detector.py  utils.py  web_server.py
src/agent_fleet/static/: agent_notes.js  agentic_state.js  api.js  app.js  capture.js  controls.js  history_tabs.js  modals.js  notes.js  render.js  sessions.js  sidebar.js  state.js  style.css  tags.js  tasks.js  utils.js  websocket.js
src/agent_fleet/templates/: index.html
src/coral/: config.py  launch.py  launch_agents.sh  tray.py  web_server.py
src/coral/agents/: base.py  claude.py  gemini.py
src/coral/api/: history.py  live_sessions.py  tasks.py  (+3 more)
src/corral/: PROTOCOL.md  __init__.py  auto_summarizer.py  git_poller.py  hook_agentic_state.py  hook_task_sync.py  hook_utils.py  jsonl_reader.py  launch.py  launch_agents.sh  log_streamer.py  session_indexer.py  session_manager.py  session_store.py  task_detector.py  utils.py  web_server.py
tests/: test_agent_event_detail_json.py  test_agentic_state.py  test_cli_server_flag.py  test_cron_parser.py  test_data_dir.py  test_editable_prompts.py  test_group_order.py  test_log_streamer.py  test_persistent_sessions.py  test_pulse_wrapping.py  test_receive_modes.py  test_renderers.js  test_schedule.py  test_search_files.py  test_session_store.py  test_task_sync.py  test_team_reminder.py  test_utils.py  test_waiting_for_input.py  test_web_server.py
themes-customization/: index.html
webhooks/: index.html
(+78 files in other folders)
