[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-fleet"
version = "0.1.0"
description = "A multi-agent orchestration system for Claude and Gemini agents in tmux."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.19.0",
]
authors = [
    { name = "Chris Knorowski" }
]

[project.scripts]
agent-fleet = "agent_fleet.web_server:main"
launch-fleet = "agent_fleet.launch:main"

[tool.setuptools.package-data]
agent_fleet = ["PROTOCOL.md", "launch_agents.sh", "templates/*.html", "static/*.css", "static/*.js"]

[tool.setuptools.packages.find]
where = ["src"]
